--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Private Portfolio - Folashade Adepoju</title>
+    <title>Archiver Website - Folasade Adepoju</title>
+    <!-- <title>Private Portfolio - Folasade Adepoju</title> -->
   </head>
   <body>
     <div id="root"></div>
